Fixed numbers overflowing, moved avatar rank little bit more to top left on mobile. (#1054)

--- a/src/containers/Leaderboard/LeaderboardContributor/LeaderboardContributor.scss
+++ b/src/containers/Leaderboard/LeaderboardContributor/LeaderboardContributor.scss
@@ -130,9 +130,11 @@
     }
 
     &__user-avatar-rank {
-      font-size: var(--font-size-regular);
-      height: 24px;
-      width: 24px;
+      font-size: var(--font-size-small);
+      height: 28px;
+      left: -8px;
+      top: -8px;
+      width: 28px;
     }
 
     &__user-login {
